gitignore: add test_util binary
Signed-off-by: Michael Adler <michael.adler@siemens.com>
Signed-off-by: Christian Storm <christian.storm@siemens.com>
Reviewed-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ test/test_crypt
 test/test_hash
 test/test_json
 test/test_server_hawkbit
+test/test_util
 test/test_verify
 test/*.out
 test/*.map
