Rename chained_handler.h in handler_helpers.h
Rename the file because more helpers functions will be stored in the
file.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -7,7 +7,7 @@
 # not drop the handler if it is not called.
 # Handler can be called dynamically based
 # on the received image type.
-obj-y	+= dummy_handler.o chain_handler.o
+obj-y	+= dummy_handler.o handler_helpers.o
 obj-$(CONFIG_ARCHIVE) += archive_handler.o
 obj-$(CONFIG_BOOTLOADERHANDLER) += boot_handler.o
 obj-$(CONFIG_BTRFS_FILESYSTEM) += btrfs_handler.o
