kconfig: define Lua in version 5.2 as default
This removes the override in all of the defconfigs and makes the
defconfig buildable by default.

As fallback we are trying to find "lua". This way Yocto should still be
buildable without any adjustments.

Signed-off-by: Daniel Braunwarth <oss@braunwarth.dev>
Reviewed-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/Kconfig
+++ b/Kconfig
@@ -248,7 +248,7 @@ comment "Lua support needs a Lua interpreter"
 
 config LUAPKG
 	string "Lua pkg-config name"
-	default "lua"
+	default "lua5.2"
 	depends on LUA
 	help
 	  Which pkg-config package supplies the Lua API.
