Add api key header and api key configuration for delta updates.
Signed-off-by: Alexander Broekhuis <alexander.broekhuis@eijsink.nl>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -282,6 +282,10 @@ webserver :
 # sslcert		: string
 #			  path of the file containing the certificate for SSL connection or pkcs11 URI
 #			  (ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=cert")
+# api_key_header	: string
+#			  HTTP header name for the API key
+# api_key			: string
+#			  API key for the delta update server
 delta :
 {
 	sslkey		= "/etc/ssl/sslkey";
