test: copy test data from source to build path
For out-of-tree builds the test data should be copied to build
directory. This makes it easier for the actual tests to use the correct
path.

Signed-off-by: Daniel Braunwarth <oss@braunwarth.dev>

--- a/test/Makefile
+++ b/test/Makefile
@@ -81,7 +81,11 @@ $(obj)/%.lnk: $(obj)/%.o $(objtree)/core/built-in.o.tmp
 
 DATADIR := test/data
 
-$(obj)/test_verify.o: $(DATADIR)/signature $(DATADIR)/signing-pubkey.pem
+PHONY += PREPARE_DATA
+PREPARE_DATA:
+	$(Q)cp -r $(srctree)/test/data $(objtree)/test/data
+
+$(obj)/test_verify.o: PREPARE_DATA $(DATADIR)/signature $(DATADIR)/signing-pubkey.pem
 
 .INTERMEDIATE: $(DATADIR)/signature
 $(DATADIR)/signature: $(DATADIR)/to-be-signed $(DATADIR)/signing-secret.pem
