suricatta: fix out-of-tree build
For out-of-tree builds we need to make sure to correct paths are passed
to the linker to embed Lua code.

If CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE is a relative path, we imply
that the path to the Lua code to be embedded is relative to the source
directory. Otherwise absolute paths are used without any manipulation.

Signed-off-by: Daniel Braunwarth <oss@braunwarth.dev>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -259,6 +259,9 @@ ifneq ($(CONFIG_SURICATTA),)
 ifneq ($(CONFIG_SURICATTA_LUA),)
 ifneq ($(CONFIG_EMBEDDED_SURICATTA_LUA),)
 ifneq ($(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE),)
+ifneq ($(findstring /, $(firstword $(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE))),)
+    CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE := $(srctree)/$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE)
+endif
 LDFLAGS_swupdate += -Wl,--format=binary -Wl,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE) -Wl,--format=default
 KBUILD_CPPFLAGS += -DEMBEDDED_SURICATTA_LUA_SOURCE_START="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE))))_start"
 KBUILD_CPPFLAGS += -DEMBEDDED_SURICATTA_LUA_SOURCE_END="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE))))_end"
