tests: fix out-of-tree build
The linker mocks must use the source path explicitly. Otherwise the
build path is implied which is wrong in this case.

Signed-off-by: Daniel Braunwarth <oss@braunwarth.dev>

--- a/test/Makefile
+++ b/test/Makefile
@@ -48,7 +48,7 @@ endif
 
 ## transfer __wrap_*() functions to according linker flags via rudimentary regex awk parsing,
 ## e.g. __wrap_channel_get becomes -Wl,--wrap=channel_get.
-LDMOCKS = `/usr/bin/env gawk '/^[^(extern)|(static)]*([\*_[:alnum:]]+[[:blank:]]+)+[\*]*__wrap_/{where = match($$0,"__wrap_[_[:alnum:]]+"); if (RSTART > 0) { print "-Wl,--wrap=" substr($$0, RSTART+7, RLENGTH-7);}}' $(basename $@).c`
+LDMOCKS = `/usr/bin/env gawk '/^[^(extern)|(static)]*([\*_[:alnum:]]+[[:blank:]]+)+[\*]*__wrap_/{where = match($$0,"__wrap_[_[:alnum:]]+"); if (RSTART > 0) { print "-Wl,--wrap=" substr($$0, RSTART+7, RLENGTH-7);}}' $(basename $(srctree)/$@).c`
 
 quiet_cmd_linktestexe = LD      $(basename $@)
       cmd_linktestexe = $(srctree)/scripts/trylink \
