make: update help
Signed-off-by: Daniel Braunwarth <oss@braunwarth.dev>

--- a/Makefile.help
+++ b/Makefile.help
@@ -16,14 +16,19 @@ help:
 	@echo '  swupdate		- software updater executable'
 	@echo
 	@echo 'Configuration:'
-	@echo '  allnoconfig		- disable all symbols in .config'
-	@echo '  allyesconfig		- enable all symbols in .config'
-	@echo '  config		- text based configurator (of last resort)'
-	@echo '  menuconfig		- interactive curses-based configurator'
-	@echo '  oldconfig		- resolve any unresolved symbols in .config'
+	@echo '  alldefconfig   - New config with all symbols set to default'
+	@echo '  allnoconfig    - New config where all options are answered with no'
+	@echo '  allyesconfig   - New config where all options are answered with yes'
+	@echo '  defconfig      - New config with default from supplied defconfig'
+	@echo '  guiconfig      - Update current config utilizing a TK based front-end'
+	@echo '  listnewconfig  - List new options'
+	@echo '  menuconfig     - Update current config utilising a menu based program'
+	@echo '  oldconfig      - Update current config utilising a provided .config as base'
+	@echo '  olddefconfig   - Same as oldconfig but sets new symbols to their'
+	@echo '                   default value without prompting'
+	@echo '  savedefconfig  - Save current config as ./defconfig (minimal config)'
 	@echo
 	@echo 'Development:'
-	@echo '  randconfig		- generate a random configuration'
 	@echo '  tests			- build and run tests for current configuration'
 	@echo
 	@echo 'Documentation:'
