--- a/Makefile.flags
+++ b/Makefile.flags
@@ -177,6 +177,10 @@ ifeq ($(CONFIG_GUNZIP),y)
 LDLIBS += z
 endif
 
+ifeq ($(CONFIG_XZ),y)
+LDLIBS += lzma
+endif
+
 ifeq ($(CONFIG_ZSTD),y)
 LDLIBS += zstd
 endif
