CI: add XZ for build
Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/configs/all_handlers_defconfig
+++ b/configs/all_handlers_defconfig
@@ -10,6 +10,7 @@ CONFIG_MONGOOSESSL=y
 CONFIG_HASH_VERIFY=y
 CONFIG_ENCRYPTED_IMAGES=y
 CONFIG_ZSTD=y
+CONFIG_XZ=y
 CONFIG_LUAEXTERNAL=y
 CONFIG_ARCHIVE=y
 CONFIG_BOOTLOADERHANDLER=y
