suricatta: Fix out-of-tree build
With commit 16554cd, CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE is prepended
by $(srctree)/ if a / is found in CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE.
This is the case for absolute paths as well as for relative paths such
as the default "suricatta/server_wfx.lua" if CONFIG_SURICATTA_WFX.
While the latter case resolves correctly, the former is broken.

Hence, properly tokenize CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE and
prepend $(srctree)/ only if / is not found in the first token, i.e,
it's an absolute path.
While at it, issue an error message if the relative path referenced
to by CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE cannot be resolved.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -263,8 +263,14 @@ ifneq ($(CONFIG_SURICATTA),)
 ifneq ($(CONFIG_SURICATTA_LUA),)
 ifneq ($(CONFIG_EMBEDDED_SURICATTA_LUA),)
 ifneq ($(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE),)
-ifneq ($(findstring /, $(firstword $(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE))),)
-    CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE := $(srctree)/$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE)
+# Strip quotes from filename
+CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE := $(patsubst "%",%,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE))
+ifeq ($(findstring /,$(word 1,$(subst /, /,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE)))),)
+# It's not an absolute path, assume it's relative to $(srcdir)
+ifeq ($(realpath $(srctree)/$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE)),)
+$(error File specified in CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE=$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE) not found)
+endif
+CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE := $(realpath $(srctree)/$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE))
 endif
 LDFLAGS_swupdate += -Wl,--format=binary -Wl,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE) -Wl,--format=default
 KBUILD_CPPFLAGS += -DEMBEDDED_SURICATTA_LUA_SOURCE_START="_binary_$(strip $(subst -,_,$(subst +,_,$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE)))))))_start"
