--- a/Makefile.flags
+++ b/Makefile.flags
@@ -127,9 +127,18 @@ endif
 ifeq ($(CONFIG_LUA),y)
 ifeq ($(CONFIG_EMBEDDED_LUA_HANDLER),y)
 ifneq ($(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE),)
+# Strip quotes from filename
+CONFIG_EMBEDDED_LUA_HANDLER_SOURCE := $(patsubst "%",%,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))
+ifeq ($(findstring /,$(word 1,$(subst /, /,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE)))),)
+# It's not an absolute path, assume it's relative to $(srcdir)
+ifeq ($(realpath $(srctree)/$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE)),)
+$(error File specified in CONFIG_EMBEDDED_LUA_HANDLER_SOURCE=$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE) not found)
+endif
+CONFIG_EMBEDDED_LUA_HANDLER_SOURCE := $(realpath $(srctree)/$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))	
+endif
 LDFLAGS_swupdate += -Wl,--format=binary -Wl,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE) -Wl,--format=default
-KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC_START="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))))_start"
-KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC_END="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE))))_end"
+KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC_START="_binary_$(strip $(subst -,_,$(subst +,_,$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE)))))))_start"
+KBUILD_CPPFLAGS += -DEMBEDDED_LUA_SRC_END="_binary_$(strip $(subst -,_,$(subst +,_,$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_LUA_HANDLER_SOURCE)))))))_end"
 endif
 endif
 endif
