test: Fix in-tree-build
Commit 60d90b5 "test: copy test data from source to build path" broke
some of the tests when doing an in-tree-build.

The following tests can now be built in-tree again:

mbedtls_defconfig
suricatta_all_modules_defconfig
test_defconfig
with_ebg_defconfig
with_lua_handlers_defconfig
with_lua_nohandlers_defconfig
with_rdiff_defconfig
with_systemd_defconfig
without_libconfig_defconfig
without_lua_defconfig

Signed-off-by: Mark Jonas <toertel@gmail.com>
Reviewed-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/test/Makefile
+++ b/test/Makefile
@@ -92,7 +92,7 @@ DATADIR := test/data
 
 PHONY += PREPARE_DATA
 PREPARE_DATA:
-	$(Q)cp -r $(srctree)/test/data $(objtree)/test/data
+	$(Q)[ "$(srctree)" -ef "$(objtree)" ] || cp -r $(srctree)/test/data $(objtree)/test/data
 
 $(obj)/test_verify.o: PREPARE_DATA $(DATADIR)/signature $(DATADIR)/signing-pubkey.pem
 
