Make LIBCONFIG mandatory
A lot of features depend on libconfiug. Without it, SWUpdate does not
support a configuration file, and not all features can be set via
command line parameters. Make LIBCONFIG mandatory for the project, as it
is always selected.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -5,7 +5,9 @@
 lib-y				+= emmc_utils.o \
 				   multipart_parser.o \
 				   parsing_library_libjson.o \
-				   server_utils.o
+				   server_utils.o \
+				   swupdate_settings.o \
+				   parsing_library_libconfig.o
 lib-$(CONFIG_DOWNLOAD)		+= downloader.o
 lib-$(CONFIG_MTD)		+= mtd-interface.o
 lib-$(CONFIG_LUA)		+= lua_interface.o lua_compat.o
@@ -36,6 +38,4 @@ lib-$(CONFIG_SIGALG_RAWRSA)	+= swupdate_rsa_verify_mbedtls.o
 lib-$(CONFIG_SIGALG_RSAPSS)	+= swupdate_rsa_verify_mbedtls.o
 endif
 lib-$(CONFIG_SIGALG_GPG)	+= swupdate_gpg_verify.o
-lib-$(CONFIG_LIBCONFIG)		+= swupdate_settings.o \
-				   parsing_library_libconfig.o
 lib-$(CONFIG_CHANNEL_CURL)	+= channel_curl.o
