Extend documentation for swupdate.cfg
Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -48,11 +48,14 @@
 #			  Possible values are ebg, grub, uboot, and none for
 #			  EFI Boot Guard, U-Boot, GRUB, and the Environment in RAM bootloader,
 #			  respectively, given the respective bootloader support is compiled-in.
-# namespace-vars	: namespace used by libubootenv for application/SWUpdate persistent
+# namespace-vars	: string
+#			  namespace used by libubootenv for application/SWUpdate persistent
 #			  variables. This can be overridden in sw-description.
 #			  It is one set in libubootenv configuration file.
-# fwenv-config-location	: path of the configuration file for libubootenv
-# gen-swversions	: generate a version file containing all installed (versioned) images.
+# fwenv-config-location	: string
+#			  path of the configuration file for libubootenv
+# gen-swversions	: string
+#			  path of a generated version file containing all installed (versioned) images.
 globals :
 {
 
