doc: document swupdate.cfg for update types
Add documentation and examples how to configure update types.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -56,6 +56,8 @@
 #			  path of the configuration file for libubootenv
 # gen-swversions	: string
 #			  path of a generated version file containing all installed (versioned) images.
+# update-type-required  : boolean
+#			  strict requires that each SWU has an update type.
 globals :
 {
 
@@ -65,6 +67,49 @@ globals :
 	/* public-key-file = "test.pem";*/
 	mtd-blacklist = "0 1 2 3 4 5 6";
 };
+
+# update-types : accepted update-type and setup
+# This allows to select per type configuration
+# for example: Application, OS, Configuration, etc.
+#
+# name			: string (mandatory)
+#
+# preupdatecmd		: string
+#			  command to be executed right before the update
+#			  is installed
+# postupdatecmd		: string
+#			  command to be executed after a successful update
+# no-downgrading	: string
+#			  not install a release older as <version>
+# no-reinstalling	: string
+#			  not install a release same as <version>
+
+update-types: (
+	{
+		name = "OS";
+		postupdatecmd = "/usr/bin/echo Finished !";
+		no-downgrading = "5.0";
+		preupdatecmd = "/usr/bin/echo Hello";
+		max-version = "8.99";
+		no-reinstalling = "5.5";
+	},
+	{
+		name = "Application";
+		postupdatecmd = "/usr/bin/echo Finished !";
+		no-downgrading = "3.0";
+		preupdatecmd = "/usr/bin/echo Hello";
+		max-version = "5.99";
+		no-reinstalling = "4.5";
+	},
+	{
+		name = "Configuration";
+		postupdatecmd = "/usr/bin/echo Configuration Finished !";
+		no-downgrading = "1.0";
+		preupdatecmd = "/usr/bin/echo Hello";
+		max-version = "7.99";
+		no-reinstalling = "1.1";
+	}
+);
 
 # logcolors : set colors for output to stdout / stderr
 #             color is set indivisually for each level
