Move openssl HASH functions in an own module
This is to prepare support for multiple cryptolibraries. HASH function
can be registered independently from other ones like decryption.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>
Tested-by: Michael Glembotzki <Michael.Glembotzki@iris-sensing.com>

--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier:     GPL-2.0-only
 
 ifeq ($(CONFIG_SSL_IMPL_OPENSSL)$(CONFIG_SSL_IMPL_WOLFSSL),y)
-obj-$(CONFIG_HASH_VERIFY)	+= verify_signature.o
+obj-$(CONFIG_HASH_VERIFY)	+= verify_signature.o swupdate_HASH_openssl.o
 ifeq ($(CONFIG_PKCS11),y)
 obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_pkcs11.o
 else
