Rename RSA with openSSL
Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>
Tested-by: Michael Glembotzki <Michael.Glembotzki@iris-sensing.com>

--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -9,8 +9,8 @@ obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_pkcs11.o
 else
 obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_openssl.o
 endif
-obj-$(CONFIG_SIGALG_RAWRSA)	+= swupdate_rsa_verify.o
-obj-$(CONFIG_SIGALG_RSAPSS)	+= swupdate_rsa_verify.o
+obj-$(CONFIG_SIGALG_RAWRSA)	+= swupdate_rsa_verify_openssl.o
+obj-$(CONFIG_SIGALG_RSAPSS)	+= swupdate_rsa_verify_openssl.o
 endif
 ifeq ($(CONFIG_SSL_IMPL_OPENSSL),y)
 obj-$(CONFIG_SIGALG_CMS)	+= swupdate_cms_verify.o
