Renamed CMS with the name of used cryptolib
Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>
Tested-by: Michael Glembotzki <Michael.Glembotzki@iris-sensing.com>

--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier:     GPL-2.0-only
 
 ifeq ($(CONFIG_SSL_IMPL_OPENSSL)$(CONFIG_SSL_IMPL_WOLFSSL),y)
-obj-$(CONFIG_HASH_VERIFY)	+= verify_signature.o swupdate_HASH_openssl.o
+obj-$(CONFIG_HASH_VERIFY)	+= swupdate_HASH_openssl.o
 ifeq ($(CONFIG_PKCS11),y)
 obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_pkcs11.o
 else
@@ -13,7 +13,7 @@ obj-$(CONFIG_SIGALG_RAWRSA)	+= swupdate_rsa_verify_openssl.o
 obj-$(CONFIG_SIGALG_RSAPSS)	+= swupdate_rsa_verify_openssl.o
 endif
 ifeq ($(CONFIG_SSL_IMPL_OPENSSL),y)
-obj-$(CONFIG_SIGALG_CMS)	+= swupdate_cms_verify.o
+obj-$(CONFIG_SIGALG_CMS)	+= swupdate_cms_verify_openssl.o
 endif
 ifeq ($(CONFIG_SSL_IMPL_WOLFSSL),y)
 obj-$(CONFIG_SIGALG_CMS)	+= swupdate_pkcs7_verify.o
