--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -3,7 +3,6 @@
 # SPDX-License-Identifier:     GPL-2.0-only
 
 ifeq ($(CONFIG_SSL_IMPL_OPENSSL)$(CONFIG_SSL_IMPL_WOLFSSL),y)
-obj-$(CONFIG_HASH_VERIFY)	+= swupdate_HASH_openssl.o
 ifeq ($(CONFIG_PKCS11),y)
 obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_pkcs11.o
 else
@@ -13,9 +12,11 @@ obj-$(CONFIG_SIGALG_RAWRSA)	+= swupdate_rsa_verify_openssl.o
 obj-$(CONFIG_SIGALG_RSAPSS)	+= swupdate_rsa_verify_openssl.o
 endif
 ifeq ($(CONFIG_SSL_IMPL_OPENSSL),y)
+obj-$(CONFIG_HASH_VERIFY)	+= swupdate_HASH_openssl.o
 obj-$(CONFIG_SIGALG_CMS)	+= swupdate_cms_verify_openssl.o
 endif
 ifeq ($(CONFIG_SSL_IMPL_WOLFSSL),y)
+obj-$(CONFIG_HASH_VERIFY)	+= swupdate_HASH_wolfssl.o
 obj-$(CONFIG_SIGALG_CMS)	+= swupdate_pkcs7_verify_wolfssl.o
 endif
 ifeq ($(CONFIG_SSL_IMPL_MBEDTLS),y)
