--- a/configs/cms_defconfig
+++ b/configs/cms_defconfig
@@ -4,14 +4,19 @@ CONFIG_HW_COMPATIBILITY=y
 # CONFIG_MTD is not set
 CONFIG_EXTRA_CFLAGS="-g"
 CONFIG_DOWNLOAD=y
+CONFIG_SURICATTA=y
+CONFIG_SURICATTA_SSL=y
 CONFIG_WEBSERVER=y
 CONFIG_MONGOOSESSL=y
-CONFIG_SIGNED_IMAGES=y
-CONFIG_SIGALG_CMS=y
+CONFIG_HASH_VERIFY=y
 CONFIG_ENCRYPTED_IMAGES=y
 CONFIG_LUAEXTERNAL=y
 CONFIG_ARCHIVE=y
+CONFIG_BOOTLOADERHANDLER=y
 CONFIG_LUASCRIPTHANDLER=y
+CONFIG_EMMC_HANDLER=y
 CONFIG_RAW=y
 CONFIG_REMOTE_HANDLER=y
 CONFIG_SHELLSCRIPTHANDLER=y
+CONFIG_SWUFORWARDER_HANDLER=y
+CONFIG_UCFWHANDLER=y
