Support runtime selection of crypto provider
Multiple algorythms and libraries can be built inside the same SWUpdate
binary, as default the first one is chosen. Allow to set at the startup
which provider for the a service should be used.

Allowed services: decrypt, hash, digest

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>
Tested-by: Michael Glembotzki <Michael.Glembotzki@iris-sensing.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -12,6 +12,20 @@
 #
 # verbose		: boolean
 #			  set verbose mode (Default: false)
+#
+# decrypt-provider	: string
+#			  if multiple algos are regitered
+#			  choose which one should be used (mbedTLS, openssl,wolfssl)
+#
+# hash-provider		: string
+#			  if multiple algos are regitered
+#			  choose which one should be used (mbedTLS, openssl,wolfssl)
+#
+# digest-provider	: string
+#			  if multiple algos are regitered
+#			  choose which one should be used
+#			  (opensslCMS, GPG, pkcs#7WolfSSL, mbedTLSRSA, opensslRSA)
+#
 # loglevel 		: integer
 #			  level for logging from 1 (no log) to 6
 # syslog 		: boolean
