--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -13,7 +13,9 @@ endif
 ifeq ($(CONFIG_SSL_IMPL_WOLFSSL),y)
 obj-$(CONFIG_HASH_VERIFY)	+= swupdate_HASH_wolfssl.o
 obj-$(CONFIG_SIGALG_CMS)	+= swupdate_pkcs7_verify_wolfssl.o
-obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_pkcs11.o
+ifeq ($(CONFIG_PKCS11),y)
+obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_wolfssl.o
+endif
 endif
 
 ifeq ($(CONFIG_SSL_IMPL_MBEDTLS),y)
