Fix warning : MG_TLS redefined
With multiple crypto Engines, MG_TLS is defined multiple times. Choose
one implementation for Mongoose, and activate it in the following order:
	1. openssl
	2. mbedTLS
	3. wolfSSL

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>
Tested-by: Michael Glembotzki <Michael.Glembotzki@iris-sensing.com>

--- a/mongoose/Makefile
+++ b/mongoose/Makefile
@@ -16,12 +16,10 @@ endif
 ifneq ($(CONFIG_MONGOOSESSL),)
 ifeq ($(CONFIG_SSL_IMPL_OPENSSL),y)
 KBUILD_CFLAGS += -DMG_TLS=2
-endif
-ifeq ($(CONFIG_SSL_IMPL_WOLFSSL),y)
-KBUILD_CFLAGS += -DMG_TLS=5
-endif
-ifeq ($(CONFIG_SSL_IMPL_MBEDTLS),y)
+else ifeq ($(CONFIG_SSL_IMPL_MBEDTLS),y)
 KBUILD_CFLAGS += -DMG_TLS=1
+else ifeq ($(CONFIG_SSL_IMPL_WOLFSSL),y)
+KBUILD_CFLAGS += -DMG_TLS=5
 endif
 endif
 endif
