crypto: mbedtls: Enable RSA PSS
With 9906f1051c (Support for multiple crypto libraries and algs) the
possibility to configure RSA PSS with mbedTLS was removed. Re-enable it.

Signed-off-by: Bastian Germann <bage@debian.org>

--- a/crypto/Kconfig
+++ b/crypto/Kconfig
@@ -51,7 +51,7 @@ menu "Signature verification algorithm"
 	config SIGALG_RSAPSS
 		bool "RSA PSS"
 		default n
-		depends on SSL_IMPL_OPENSSL || SSL_IMPL_WOLFSSL
+		depends on SSL_IMPL_OPENSSL || SSL_IMPL_WOLFSSL || SSL_IMPL_MBEDTLS
 
 	config SIGALG_CMS
 		bool "Cryptographic Message Syntax (CMS) / PKCS#7"
