swupdate: Add param/config --decryption-key/decryption-key-file
The names aes-key or aes-key-file are no longer 100% suitable if the same name
is also to be used for asymmetric decryption. Introduce a neutral name:
decryption-key as an alias.

Signed-off-by: Michael Glembotzki <Michael.Glembotzki@iris-sensing.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -36,8 +36,8 @@
 # mtd-blacklist		: list integers
 #			  MTD devices where SWUpdate
 #			  must not try to check for UBI filesystem.
-# aes-key-file		: string
-#			  file containing the symmetric key for
+# aes-key-file or	: string
+# decryption-key-file	  file containing the decryption key for
 #			  image decryption
 # preupdatecmd		: string
 #			  command to be executed right before the update
